Работаю над мобильной версией версией

--- a/index.html
+++ b/index.html
@@ -138,138 +138,138 @@
       </div>
     </section>
 
-<!--    <section class="shops" id="shops">-->
-<!--      <div class="shops__container">-->
-<!--        <div class="shops__title">-->
-<!--          Выбирай магазины и заказывай-->
-<!--          товары по низким ценам-->
-<!--        </div>-->
+    <section class="shops" id="shops">
+      <div class="shops__container">
+        <div class="shops__title">
+          Выбирай магазины
+          <span>и заказывай товары по низким ценам</span>
+        </div>
 
-<!--        <div class="shops__list">-->
-<!--          <div class="shops__item sima-mag">-->
-<!--            <a href="/" class="shops__item-title">-->
-<!--              Sima-mag.ru-->
-<!--            </a>-->
+        <div class="shops__list">
+          <div class="shops__item sima-mag">
+            <a href="/" class="shops__item-title">
+              Sima-mag.ru
+            </a>
 
-<!--            <div class="shops__categories">-->
-<!--              <div class="shops__category shops__category-1" >-->
-<!--                <div class="shops__category-name">-->
-<!--                  Детские товары-->
-<!--                </div>-->
-<!--              </div>-->
-<!--              <div class="shops__category shops__category-2" >-->
-<!--                <div class="shops__category-name">-->
-<!--                  <span>Товары</span>  для праздника-->
-<!--                </div>-->
-<!--              </div>-->
-<!--              <div class="shops__category shops__category-3" >-->
-<!--                <div class="shops__category-name">-->
-<!--                  Посуда-->
-<!--                </div>-->
-<!--              </div>-->
-<!--              <div class="shops__category shops__category-4" >-->
-<!--                <div class="shops__category-name">-->
-<!--                  Текстиль-->
-<!--                </div>-->
-<!--              </div>-->
-<!--              <div class="shops__category shops__category-5" >-->
-<!--                <div class="shops__category-name">-->
-<!--                  Творчество и хобби-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>-->
+            <div class="shops__categories">
+              <div class="shops__category shops__category-1" >
+                <div class="shops__category-name">
+                  Детские товары
+                </div>
+              </div>
+              <div class="shops__category shops__category-2" >
+                <div class="shops__category-name">
+                  <span>Товары</span>  для праздника
+                </div>
+              </div>
+              <div class="shops__category shops__category-3" >
+                <div class="shops__category-name">
+                  Посуда
+                </div>
+              </div>
+              <div class="shops__category shops__category-4" >
+                <div class="shops__category-name">
+                  Текстиль
+                </div>
+              </div>
+              <div class="shops__category shops__category-5" >
+                <div class="shops__category-name">
+                  Творчество и хобби
+                </div>
+              </div>
+            </div>
 
-<!--            <a href="/" class="shops__item-link">-->
-<!--              Переход в магазин-->
-<!--            </a>-->
-<!--          </div>-->
+            <a href="/" class="shops__item-link">
+              Переход в магазин
+            </a>
+          </div>
 
-<!--          <div class="shops__item gala-mag">-->
-<!--            <a href="/" class="shops__item-title">-->
-<!--              Гала-маг-->
-<!--            </a>-->
+          <div class="shops__item gala-mag">
+            <a href="/" class="shops__item-title">
+              Гала-маг
+            </a>
 
-<!--            <div class="shops__categories">-->
-<!--              <div class="shops__category shops__category-1" >-->
-<!--                <div class="shops__category-name">-->
-<!--                  Бытовая техника-->
-<!--                </div>-->
-<!--              </div>-->
-<!--              <div class="shops__category shops__category-2" >-->
-<!--                <div class="shops__category-name">-->
-<!--                  Посуда-->
-<!--                </div>-->
-<!--              </div>-->
-<!--              <div class="shops__category shops__category-3" >-->
-<!--                <div class="shops__category-name">-->
-<!--                  Инструменты-->
-<!--                </div>-->
-<!--              </div>-->
-<!--              <div class="shops__category shops__category-4" >-->
-<!--                <div class="shops__category-name">-->
-<!--                  Авто-->
-<!--                </div>-->
-<!--              </div>-->
-<!--              <div class="shops__category shops__category-5" >-->
-<!--                <div class="shops__category-name">-->
-<!--                  Спорт и отдых-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--            <a href="/" class="shops__item-link">-->
-<!--              Переход в магазин-->
-<!--            </a>-->
-<!--          </div>-->
+            <div class="shops__categories">
+              <div class="shops__category shops__category-1" >
+                <div class="shops__category-name">
+                  Бытовая техника
+                </div>
+              </div>
+              <div class="shops__category shops__category-2" >
+                <div class="shops__category-name">
+                  Посуда
+                </div>
+              </div>
+              <div class="shops__category shops__category-3" >
+                <div class="shops__category-name">
+                  Инструменты
+                </div>
+              </div>
+              <div class="shops__category shops__category-4" >
+                <div class="shops__category-name">
+                  Авто
+                </div>
+              </div>
+              <div class="shops__category shops__category-5" >
+                <div class="shops__category-name">
+                  Спорт и отдых
+                </div>
+              </div>
+            </div>
+            <a href="/" class="shops__item-link">
+              Переход в магазин
+            </a>
+          </div>
 
-<!--          <div class="shops__item nazelenom">-->
-<!--            <div class="shops__item-title">-->
-<!--              <img class="shops__item-logo" src="./dist/images/shops/nazelenom.png" alt="nazelenom.ru">-->
-<!--            </div>-->
+          <div class="shops__item nazelenom">
+            <div class="shops__item-title">
+              <img class="shops__item-logo" src="./dist/images/shops/nazelenom.png" alt="nazelenom.ru">
+            </div>
 
-<!--            <div class="shops__categories">-->
-<!--              <div class="shops__category shops__category-1" >-->
-<!--                <div class="shops__category-name">-->
-<!--                  Бытовая химия-->
-<!--                </div>-->
-<!--              </div>-->
-<!--              <div class="shops__category shops__category-2" >-->
-<!--                <div class="shops__category-name">-->
-<!--                  Красота и гигиена-->
+            <div class="shops__categories">
+              <div class="shops__category shops__category-1" >
+                <div class="shops__category-name">
+                  Бытовая химия
+                </div>
+              </div>
+              <div class="shops__category shops__category-2" >
+                <div class="shops__category-name">
+                  Красота и гигиена
 
-<!--                </div>-->
-<!--              </div>-->
-<!--              <div class="shops__category shops__category-3" >-->
-<!--                <div class="shops__category-name">-->
-<!--                  Канцелярские товары-->
-<!--                </div>-->
-<!--              </div>-->
-<!--              <div class="shops__category shops__category-4" >-->
-<!--                <div class="shops__category-name">-->
-<!--                  Сад и огород-->
-<!--                </div>-->
-<!--              </div>-->
-<!--              <div class="shops__category shops__category-5" >-->
-<!--                <div class="shops__category-name">-->
-<!--                  Посуда-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--            <a href="/" class="shops__item-link">-->
-<!--              Переход в магазин-->
-<!--            </a>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--        <div class="shops__background"></div>-->
-<!--        <div class="shops__background-boxes"></div>-->
-<!--        <div class="shops__background-box1"></div>-->
-<!--        <div class="shops__background-box2"></div>-->
-<!--        <div class="shops__background-box3"></div>-->
-<!--        <div class="shops__background-light"></div>-->
-<!--        <div class="shops__background-hand"></div>-->
-<!--        <div class="shops__background-lamp"></div>-->
-<!--        <div class="shops__background-flower"></div>-->
-<!--      </div>-->
-<!--    </section >-->
+                </div>
+              </div>
+              <div class="shops__category shops__category-3" >
+                <div class="shops__category-name">
+                  Канцелярские товары
+                </div>
+              </div>
+              <div class="shops__category shops__category-4" >
+                <div class="shops__category-name">
+                  Сад и огород
+                </div>
+              </div>
+              <div class="shops__category shops__category-5" >
+                <div class="shops__category-name">
+                  Посуда
+                </div>
+              </div>
+            </div>
+            <a href="/" class="shops__item-link">
+              Переход в магазин
+            </a>
+          </div>
+        </div>
+        <div class="shops__background"></div>
+        <div class="shops__background-boxes"></div>
+        <div class="shops__background-box1"></div>
+        <div class="shops__background-box2"></div>
+        <div class="shops__background-box3"></div>
+        <div class="shops__background-light"></div>
+        <div class="shops__background-hand"></div>
+        <div class="shops__background-lamp"></div>
+        <div class="shops__background-flower"></div>
+      </div>
+    </section >
 
 <!--    <section class="contacts" id="contacts">-->
 
